# FontMetricsNormalizer

./: .gitignore  CHECKPOINT_AUDIT.md  CLUSTERING_AUDIT.md  FamilyMetricsNormalizer.py  FamilyMetricsNormalizerEnhanced.py  Improvements.md  OS2_UPDATE_ANALYSIS.md  Project structure.md  README.md  VERBOSITY_AUDIT.md  pyproject.toml  raw_github_urls.txt  requirements.txt
ebrium/: __init__.py  __main__.py  application.py  checkpoints.py  cli.py  clustering.py  config.py  font_io.py  grouping.py  measurements.py  models.py  planning.py  validation.py  variation_probe.py
